// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Maxi hover simple actions Divider shadow 1`] = `
[
  {
    "action": "hover",
    "attributes": {
      "divider-box-shadow-blur-unit-xl": "px",
      "divider-box-shadow-blur-xl": 44,
      "divider-box-shadow-horizontal-unit-xl": "px",
      "divider-box-shadow-horizontal-xl": 22,
      "divider-box-shadow-inset-xl": false,
      "divider-box-shadow-palette-color-xl": 8,
      "divider-box-shadow-palette-opacity-xl": 0.11,
      "divider-box-shadow-palette-sc-status-xl": false,
      "divider-box-shadow-palette-status-xl": true,
      "divider-box-shadow-spread-unit-xl": "px",
      "divider-box-shadow-spread-xl": 55,
      "divider-box-shadow-vertical-unit-xl": "px",
      "divider-box-shadow-vertical-xl": 33,
    },
    "css": {
      "general": {
        "breakpoint": null,
        "styles": {
          "box-shadow": "0px 0px 0px 0px rgba(var(--maxi-light-color-undefined),1)",
        },
      },
      "xl": {
        "breakpoint": 1920,
        "styles": {
          "box-shadow": "22px 33px 44px 55px rgba(var(--maxi-light-color-8,150,176,203),0.11)",
        },
      },
    },
    "effects": {
      "disableTransition": false,
      "easing-general": "ease",
      "hoverStatus": false,
      "transition-delay-general": 0,
      "transition-duration-general": 0.3,
      "transition-status-general": true,
      "transitionTarget": " .maxi-divider-block__divider",
    },
    "id": 1,
    "isButton": true,
    "sid": "dbs",
    "target": " .maxi-divider-block__divider",
    "title": "Hello World!",
    "uniqueID": "divider-maxi-1se8ef1z-u",
  },
]
`;

exports[`Divider Maxi hover simple actions Divider shadow 2`] = `" body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { box-shadow: 0px 0px 0px 0px rgba(var(--maxi-light-color-undefined),1);}@media screen and (max-width: 1920px) { body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { box-shadow: 22px 33px 44px 55px rgba(var(--maxi-light-color-8,150,176,203),0.11);}}"`;

exports[`Divider Maxi hover simple actions Divider shadow 3`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, box-shadow 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Divider shadow 4`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, box-shadow 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Line settings 1`] = `
[
  {
    "action": "hover",
    "attributes": {
      "divider-border-palette-color-xl": 8,
      "divider-border-palette-opacity-xl": 0.5,
      "divider-border-palette-sc-status-xl": false,
      "divider-border-palette-status-xl": true,
      "divider-border-style-xl": "dashed",
      "divider-border-top-width-xl": 22,
      "divider-width-xl": 11,
    },
    "css": {
      "general": {
        "breakpoint": null,
        "styles": {
          "border-color": "var(--maxi-light-divider-color,rgba(var(--maxi-light-color-8,150,176,203),0.5))",
          "border-right-style": "none",
          "border-top-style": "dashed",
          "border-top-width": "22px",
          "height": "22px",
          "width": "11px",
        },
      },
      "xxl": {
        "breakpoint": 1921,
        "styles": {
          "border-top-style": "solid",
        },
      },
    },
    "effects": {
      "disableTransition": false,
      "easing-general": "ease",
      "hoverStatus": false,
      "transition-delay-general": 0,
      "transition-duration-general": 0.3,
      "transition-status-general": true,
    },
    "id": 1,
    "isButton": true,
    "sid": "dls",
    "target": " .maxi-divider-block__divider",
    "title": "Hello World!",
    "uniqueID": "divider-maxi-1se8ef1z-u",
  },
]
`;

exports[`Divider Maxi hover simple actions Line settings 2`] = `" body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { width: 11px; height: 22px; border-top-width: 22px; border-right-style: none; border-top-style: dashed; border-color: var(--maxi-light-divider-color,rgba(var(--maxi-light-color-8,150,176,203),0.5));}@media screen and (min-width: 1922px) { body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { border-top-style: solid;}}"`;

exports[`Divider Maxi hover simple actions Line settings 3`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, border-color 0.3s ease 0s, border-top-style 0.3s ease 0s, border-right-style 0.3s ease 0s, border-top-width 0.3s ease 0s, height 0.3s ease 0s, width 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Line settings 4`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, border-color 0.3s ease 0s, border-top-style 0.3s ease 0s, border-right-style 0.3s ease 0s, border-top-width 0.3s ease 0s, height 0.3s ease 0s, width 0.3s ease 0s;}"`;
